fix: 新增mall-by-react

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  button(style="margin-right: 20px;padding: 10px 18px;")
+    a(href="/mall") mall
+  button(style="margin-right: 20px;padding: 10px 18px;")
+    a(href="/mall-by-react") mall-by-react
+  button(style="margin-right: 20px;padding: 10px 18px;")
+    a(href="/app/#/activity") app
